--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.6",
+    "@angular/material-moment-adapter": "^15.2.8",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
+    "server": "^1.0.38",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
